--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,60 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-          crossorigin="anonymous">
-    <title>{{title}}</title>
-</head>
-<body>
-<header>
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand" href="#">Ветеринарная Клиника "Дом Манула"</a>
-    </nav>
-</header>
-<!-- Begin page content -->
-<main role="main" class="container">
-    {% block content %}{% endblock %}
-</main>
-</body>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet"
+              href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+              crossorigin="anonymous">
+        <link rel="stylesheet" href="static/css/style.css">
+        <title>{{title}}</title>
+    </head>
+    <body>
+        <header>
+            <div class="logo">
+                <a href="/" class="header-adress">
+                    <h1>ДОМ МАНУЛА</h1>
+                    <h3>
+                        Ветеренарная клиника<br>
+                        города Омск
+                    </h3>
+                </a>
+                <a href="https://yandex.ru/maps/-/CCUBvBXDCC" target="_blank" class="header-adress">
+                    <p>УЛ.10 ЛЕТ ОКТЯБРЯ, 41</p>
+                </a>
+            </div>
+            <nav class="reg">
+                <a href="#" class="header-adress">
+                    <font class="p-3">Вход</font>
+                </a>
+                <a href="#" class="header-adress">
+                    <font class="p-3">Регистрация</font>
+                </a>
+            </nav>
+            <nav class="navbar navbar-expand-lg menu">
+                <ul class="navbar-nav">
+                    <li class="menu-item">
+                        <a class="menu-item nav-link header-adress {{ main_status }}" href="/">Главная</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-item nav-link header-adress {{ crew_status }}" href="#">Сотрудники</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-item nav-link header-adress {{ price_status }}" href="#">Услуги</a>
+                    </li>
+                    <li class="menu-item">
+                        <a class="menu-item nav-link header-adress {{ self_status }}" href="#">О нас</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <!-- Begin page content -->
+        <main role="main" class="container block-content">
+            {% block content %}{% endblock %}
+        </main>
+        <footer role="contentinfo">
+
+        </footer>
+    </body>
 </html>
