--- a/templates/personal.html
+++ b/templates/personal.html
@@ -10,8 +10,8 @@
                     <div  class="doctor-div">
                         <img src="static/img/{{ doctor.image }}" class="low-sh" height="300" width="230">
                         <div class="doctor-text">
-                            <b class="doctor-name">{{doctor.surname}} {{doctor.name}} {{doctor.sec_name}}</b>
-                            <p class="spec-name"><b>{{doctor.speciality}}</b></p>
+                            <b class="p25pt">{{doctor.surname}} {{doctor.name}} {{doctor.sec_name}}</b>
+                            <p class="p20pt"><b>{{doctor.speciality}}</b></p>
                             <font class="simple-text">
                                 Опыт работы: {{doctor.experience}} лет/года
                                 <br>
