--- a/templates/price.html
+++ b/templates/price.html
@@ -1,15 +1,23 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Прайс-Лист</h1>
-{% for d in deps %}
-    <h2>{{d.title}}</h2>
-        <ul>
-        {% for p in service %}
-            {% if d.id == p.dep_id %}
-                <li>{{ p.title }} ----- {{ p.cost }} руб.</li>
-            {% endif %}
-        {% endfor %}
-        </ul>
-{% endfor %}
+    <h1 class="center-h1"><b>Услуги</b></h1>
+    {% for spec in specialties %}
+        <h2 class="left-h2-mini"><b>{{spec.title}}</b></h2>
+        <div class="price-list">
+            {% for prive in service %}
+                {% if spec.id == prive.dep_id %}
+                    <div  class="price-item">
+                        <table width="100%">
+                            <tr>
+                                <td class="hide"><button type="button" class="btn btn-info sign less">Записаться</button></td>
+                                <td class="will-hide"><p class="p20pt2"><b>{{ prive.title }}</b></p></td>
+                                <td class="will-hide"><p class="p20pt-dark right"><b>{{ prive.cost }} руб.</b></p></td>
+                            </tr>
+                        </table>
+                    </div>
+                {% endif %}
+            {% endfor %}
+        </div>
+    {% endfor %}
 {% endblock %}
