--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
                 <a href="/" class="header-adress">
                     <h1>ДОМ МАНУЛА</h1>
                     <h3>
-                        Ветеренарная клиника<br>
+                        Ветеринарная клиника<br>
                         города Омск
                     </h3>
                 </a>
