--- a/templates/timetable.html
+++ b/templates/timetable.html
@@ -49,4 +49,8 @@
         {% endfor %}
     {% endfor %}
 </table>
+<form action="" method="post">
+    <br>
+    <p align="center">{{ form.save_but(type="submit", class="btn btn-primary" )}}</p>
+</form>
 {% endblock %}
