--- a/templates/news.html
+++ b/templates/news.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <img src="static/img/intro.jpg" width="1100">
-<div align="center"><b>Здоровый питомец - счастливый питомец!</b></div>
+<div align="center"><b>🐾 Здоровый питомец - счастливый питомец 🐾</b></div>
 
 <h1>Лента новостей</h1>
 
