--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
                 <a href="/" class="header-adress">
                     <h1>ДОМ МАНУЛА</h1>
                     <h3>
-                        Ветеренарная клиника<br>
+                        Ветеринарная клиника<br>
                         города Омск
                     </h3>
                 </a>
@@ -24,27 +24,34 @@
                     <p>УЛ.10 ЛЕТ ОКТЯБРЯ, 41</p>
                 </a>
             </div>
+            {% if not current_user.is_authenticated %}
             <nav class="reg">
-                <a href="#" class="header-adress">
+                <a href="/login" class="header-adress">
                     <font class="p-3">Вход</font>
                 </a>
-                <a href="#" class="header-adress">
+                <a href="/register" class="header-adress">
                     <font class="p-3">Регистрация</font>
                 </a>
             </nav>
+            {% else %}
+            <nav class="reg">
+                <a class="header-adress" href="/logout">
+                    <font class="p-3">{{ current_user.name }} {{ current_user.surname }}</font></a>
+            </nav>
+            {% endif %}
             <nav class="navbar navbar-expand-lg menu">
                 <ul class="navbar-nav">
                     <li class="menu-item">
                         <a class="menu-item nav-link header-adress {{ main_status }}" href="/">Главная</a>
                     </li>
                     <li class="menu-item">
-                        <a class="menu-item nav-link header-adress {{ crew_status }}" href="#">Сотрудники</a>
+                        <a class="menu-item nav-link header-adress {{ crew_status }}" href="/personal">Сотрудники</a>
                     </li>
                     <li class="menu-item">
-                        <a class="menu-item nav-link header-adress {{ price_status }}" href="#">Услуги</a>
+                        <a class="menu-item nav-link header-adress {{ price_status }}" href="/price">Услуги</a>
                     </li>
                     <li class="menu-item">
-                        <a class="menu-item nav-link header-adress {{ self_status }}" href="#">О нас</a>
+                        <a class="menu-item nav-link header-adress {{ self_status }}" href="/about_us">О нас</a>
                     </li>
                 </ul>
             </nav>
