--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,16 +10,9 @@ body {
 header {
     background-color: #1CD3A2;
     color: #FFFFFF;
-    padding-bottom: 0.5%;
     padding-top: 0.5%;
-    min-height: 180px;
-    box-shadow: 0 0 8px #696969;
-
-    transition: all 0.65s;
-}
-
-header:hover {
-    box-shadow: 0 0 25px #454545;
+    min-height: 141px;
+    width: 100%;
 }
 
 a {
@@ -55,6 +48,11 @@ a:hover {
     text-shadow: 0 0 20px #696969;
 }
 
+.active {
+    color: #E8E8E8;
+    text-shadow: 0 0 10px #949494;
+}
+
 .reg {
     float: right;
     right: 1%;
@@ -63,7 +61,26 @@ a:hover {
 }
 
 .menu {
-    margin-top: 6%;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #1CD3A2;
+    width: 100%;
+    box-shadow: 0 10px 10px 0 #BABABA;
+    padding-left: 20%;
+    padding-right: 20%;
+    z-index: 100;
+
+    transition: all 1s;
+}
+
+.menu:hover {
+    background-color: #19C899;
+    box-shadow: 0 10px 8px #757575;
+}
+
+header:hover ~ .menu {
+    box-shadow: 0 10px 8px #757575;
 }
 
 .menu-item {
@@ -71,6 +88,12 @@ a:hover {
     padding-left: 30%;
     min-width: 100px;
     font-size: 17pt;
+}
+
+.menu-footer {
+    margin-top: 1%;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 .navbar {
@@ -82,14 +105,8 @@ footer {
     color: #FFFFFF;
     padding-bottom: 0.5%;
     padding-top: 0.5%;
-    min-height: 100px;
+    min-height: 300px;
     box-shadow: 0 0 8px #696969;
-}
-
-.menu-footer {
-    right: 20%;
-    left: 20%;
-    margin-top: 1%;
 }
 
 .block-content {
@@ -115,13 +132,21 @@ footer {
     font-size: 30pt;
 }
 
+.left-h2-mini {
+    color: #56675C;
+    text-shadow: 0 0 3px #A9A9A9;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    font-size: 25pt;
+}
+
 .doctors {
     margin-top: 3%;
 }
 
 .doctor-div {
     display: flex;
-    margintop: 1%;
+    margin-top: 1%;
     margin-bottom: 5%;
 }
 
@@ -133,16 +158,28 @@ footer {
     margin-left: 3%;
 }
 
-.doctor-name {
+.p25pt {
     font-size: 25pt;
     color: #669E85;
     text-shadow: 0 0 2px #669E85;
 }
 
-.spec-name {
+.p20pt {
     font-size: 20pt;
     color: #92AB9B;
     text-shadow: 0 0 1px #92AB9B;
+}
+
+.p20pt2 {
+    font-size: 18pt;
+    color: #648777;
+    text-shadow: 0 0 2px #648777;
+}
+
+.p20pt-dark {
+    font-size: 18pt;
+    color: #4D5D53;
+    text-shadow: 0 0 2px #4D5D53;
 }
 
 .simple-text {
@@ -170,4 +207,207 @@ blockquote {
     box-shadow: 0 0 20px #40BA84;
     background-color: #40BA84;
     border-color: #40BA84;
+}
+
+.price-item {
+    padding-top: 0.3%;
+    padding-bottom: 0.3%;
+    height: 60px;
+
+    transition: all 1s;
+}
+
+.hide {
+    display: none;
+}
+
+.less {
+    border-radius: 0;
+    height: 60px;
+    font-size: 17pt;
+    padding: 0;
+}
+
+.price-item:hover .will-hide {
+    display: none;
+}
+
+.price-item:hover .hide {
+    display: block;
+}
+
+.price-item:hover .less {
+    width: 100%;
+}
+
+.right {
+    text-align: right;
+}
+
+.vk-adress {
+    color: #DFE0E7;
+    padding: 21px 11px 26px 9px;
+    background-color: #2a5885;
+    border-radius: 10px;
+}
+
+.vk-adress:hover {
+    background-color: #3576B6;
+    border-radius: 10px;
+    color: #DFE0E7;
+}
+
+.telegram-adress {
+    color: #0088cc;
+    border-radius: 10px;
+}
+
+.contacts {
+    display: flex;
+}
+
+.mt-10 {
+    margin-top: 10px;
+}
+
+.mt-11 {
+    margin-top: 13px;
+}
+
+.contacts-item {
+    min-width: 250px;
+    text-align: center;
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+.contact-number:hover {
+    color: #575757;
+    text-shadow: 0 0 1px #000000;
+}
+
+.map {
+    position: relative;
+    overflow: hidden;
+}
+
+.map-2 {
+    width: 100%;
+    height: 500px;
+    position: relative;
+}
+
+.map-adress-1 {
+    color: #eee;
+    font-size: 12px;
+    position: absolute;
+    top: 0px;
+}
+
+.map-adress-2 {
+    color: #eee;
+    font-size: 12px;
+    position: absolute;
+    top: 14px;
+}
+
+.mt-50 {
+    margin-top: 50px;
+}
+
+.mb-100 {
+    margin-bottom: 100px;
+}
+
+.container_slider_css {
+    margin: 50px auto;
+    width: 100%;
+    height: 1000px;
+    overflow: hidden;
+    position: relative
+}
+
+.photo_slider_css {
+    position: absolute;
+    animation: round 16s infinite;
+    opacity: 0;
+    width: 100%
+}
+
+@keyframes round {
+    25% {
+        opacity: 1
+    }
+    40% {
+        opacity: 0
+    }
+}
+
+img:nth-child(1) {
+    animation-delay: 12s
+}
+
+img:nth-child(2) {
+    animation-delay: 8s
+}
+
+img:nth-child(3) {
+    animation-delay: 4s
+}
+
+img:nth-child(4) {
+    animation-delay: 0
+}
+
+@media(min-width: 0px) and (max-width: 320px) {
+    .container_slider_css {
+        width: 80%;
+        height: 190px
+    }
+}
+
+@media(min-width: 321px) and (max-width: 480px) {
+    .container_slider_css {
+        width: 80%;
+        height: 190px
+    }
+}
+
+.center-h1-v2 {
+    color: #6F9B7F;
+    font-size: 40pt;
+}
+
+.block-news {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: flex;
+    width: 100%;
+}
+
+.block-new {
+    width: 47%;
+    margin-right: 1.5%;
+    margin-left: 1.5%;
+}
+
+.new {
+    margin-top: 15px;
+}
+
+.news-img {
+    height: auto;
+    width: 100%;
+    box-shadow: 0 0 5px #5C5C5C;
+    margin-bottom: 10px;
+}
+
+.simple-text-plus {
+    font-size: 18pt;
+}
+
+.date {
+    margin-top: 10px;
+    text-align: right;
+    color: #789182;   
 }
