--- a/static/css/style.css
+++ b/static/css/style.css
@@ -322,40 +322,39 @@ blockquote {
 .container_slider_css {
     margin: 50px auto;
     width: 100%;
-    height: 1000px;
+    height: 700px;
     overflow: hidden;
     position: relative
 }
 
 .photo_slider_css {
     position: absolute;
-    animation: round 16s infinite;
+    animation: round 30s infinite;
     opacity: 0;
     width: 100%
 }
 
 @keyframes round {
-    25% {
+    5% {
         opacity: 1
     }
     40% {
+        opacity: 1
+    }
+    45% {
         opacity: 0
     }
 }
 
 img:nth-child(1) {
-    animation-delay: 12s
+    animation-delay: 20s
 }
 
 img:nth-child(2) {
-    animation-delay: 8s
+    animation-delay: 10s
 }
 
 img:nth-child(3) {
-    animation-delay: 4s
-}
-
-img:nth-child(4) {
     animation-delay: 0
 }
 
@@ -410,4 +409,74 @@ img:nth-child(4) {
     margin-top: 10px;
     text-align: right;
     color: #789182;   
+}
+
+.width-40 {
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+
+.myformelem {
+    margin-top: 7%;
+    margin-bottom: 7%;
+    font-size: 14pt;
+}
+
+.p15pt {
+    font-size: 15pt;
+}
+
+.timetable-btn {
+    padding-top: 3px;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    color: #FFFFFF;
+    background-color: #39ab79;
+    box-shadow: 0 0 5px #39ab79;
+    margin-top: 3%;
+    margin-bottom: 3%;
+
+    transition: all 0.5s;
+}
+
+.timetable-btn:hover {
+    box-shadow: 0 0 15px #39ab79;
+}
+
+.white-adress, .white-adress:hover {
+    color: #828282;
+    text-shadow: 0 0 1px #828282;
+    font-size: 20pt;
+}
+
+.timetable {
+    border-color: #EAFBF8;
+    width: 120%;
+    margin-left: -10%;
+    font-size: 13pt;
+}
+
+th, td {
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+
+th {
+    color: #56675C;
+    text-shadow: 0 0 2px #A9A9A9;
+    font-size: 15pt;
+    text-align: left;
+}
+
+td {
+    color: #56675C;
+    text-shadow: 0 0 1px #A9A9A9;
+    border-top: 2px solid #D0D2D1;
+}
+
+.w-100p {
+    width: 300px;
 }
