--- a/templates/personal.html
+++ b/templates/personal.html
@@ -2,16 +2,17 @@
 
 {% block content %}
     <h1 class="center-h1"><b>Наши специалисты</b></h1>
+    <a href="../timetable" class="white-adress"><div class="timetable-btn"><b>Посмотреть расписание</b></div></a>
     {% for spec in specialties %}
         {% if specialties[spec] %}
             <h2 class="left-h2"><b>{{ spec }}</b></h2>
             <div class="doctors">
                 {% for doctor in specialties[spec] %}
-                    <div  class="doctor-div">
+                    <div class="doctor-div">
                         <img src="static/img/{{ doctor.image }}" class="low-sh" height="300" width="230">
                         <div class="doctor-text">
-                            <b class="doctor-name">{{doctor.surname}} {{doctor.name}} {{doctor.sec_name}}</b>
-                            <p class="spec-name"><b>{{doctor.speciality}}</b></p>
+                            <b class="p25pt">{{doctor.surname}} {{doctor.name}} {{doctor.sec_name}}</b>
+                            <p class="p20pt"><b>{{doctor.speciality}}</b></p>
                             <font class="simple-text">
                                 Опыт работы: {{doctor.experience}} лет/года
                                 <br>
